Increase hero padding-top to 140px to prevent navbar overlap

--- a/client/src/pages/Home.css
+++ b/client/src/pages/Home.css
@@ -48,7 +48,7 @@
   align-items: center;
   position: relative;
   overflow: hidden;
-  padding-top: 100px;
+  padding-top: 140px;
   background: #000000;
 }
 
